# Docker-Telegram-Bot-Engine

./: .env.example  .gitignore  .project_root  LICENSE  Makefile  README.md  docker-compose.yaml
config/: actions.example.json  actions.example.yaml  host-actions.example.json  host-actions.example.yaml  users.example.json  users.example.yaml
config/bot/: actions.yaml
config/host/: host-actions.yaml
docs/: README.md  bot-configuration.md  folder-layout.md  host-configuration.md  priority-overrides.md  templates-and-build.md
examples/cloudflare_routes/: README.md
examples/cloudflare_routes/config/: README.md  actions.yaml  host-actions.yaml  users.yaml
examples/cloudflare_routes/scripts/: README.md  cf.sh
examples/storage/scripts/: cf.sh  (+1 more)
src/bot/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
src/bot/bot_service/: bot.py  engine.py  event_args.py  host_client.py  host_loader.py  presentation.py  reply_format.py  result.py
src/bot/bot_service/actions/: __init__.py  docker_actions.py
src/bot/tests/: support_handlers.py  test_bot_command_handlers.py  test_docker_actions.py  test_engine.py  test_host_client.py  test_host_loader.py  test_presentation_smoke.py  test_reply_format.py
src/config-builder/: README.md  main.py  pyproject.toml
src/config-builder/builder/: __init__.py  cli.py  io.py  merge.py  project_root.py
src/config-builder/tests/: test_cli.py  test_project_root.py
src/host-runner/: README.md  main.py  pyproject.toml
src/host-runner/host_runner/: __init__.py  config.py  server.py
src/host-runner/tests/: test_server.py
(+15 files in other folders)
