[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["docker>=7.2.0", "python-telegram-bot>=22.8"]

[dependency-groups]
dev = ["pytest>=8.3.2", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
